# wql

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: docusaurus.yml
chains-support/evm-adapter/: Cargo.toml
chains-support/evm-adapter/src/: chains.rs  entity.rs  lib.rs  mod.rs  result.rs
chains-support/evm-adapter/src/common/: account.rs  block.rs  chain.rs  config.rs  dump.rs  ens.rs  entity.rs  entity_id.rs  filter.rs  filters.rs  log.rs  logs.rs  mod.rs  query_result.rs  serializer.rs  transaction.rs  types.rs
chains-support/evm-adapter/src/resolvers/: mod.rs
chains-support/evm-adapter/src/rpc/: mod.rs
chains-support/sui-adapter/: Cargo.toml
chains-support/sui-adapter/src/: chains.rs  lib.rs  result.rs
chains-support/sui-adapter/src/common/: chain.rs  config.rs  mod.rs  query_result.rs  serializer.rs  types.rs
chains-support/sui-adapter/src/resolvers/: resolve_account.rs
chains_support/evm_adapter/: Cargo.toml
chains_support/evm_adapter/src/: evm_chains.rs  mod.rs  support.rs
chains_support/sui_adapter/: Cargo.toml
chains_support/sui_adapter/rpc/: mod.rs
chains_support/sui_adapter/src/: mod.rs
cli/: Cargo.toml
cli/src/: cli.rs  command.rs  lib.rs  main.rs  print.rs
core/: Cargo.toml
core/src/: lib.rs  mock.rs  parse_sql.rs  result.rs  worm.rs
core/src/adapter/: error.rs  mod.rs
core/src/ast/: ast_literal.rs  data_type.rs  ddl.rs  expr.rs  function.rs  mod.rs  operator.rs  query.rs
core/src/ast_builder/: chain.rs  chain_factor.rs  chain_name.rs  index.rs  mod.rs  query.rs  show_chain_entities.rs  show_chain_entities_columns.rs
core/src/ast_builder/expr/: exists.rs  in_list.rs  mod.rs
core/src/ast_builder/select/: filter.rs  group_by.rs  having.rs  limit.rs  offset.rs  offset_limit.rs  order_by.rs  project.rs  root.rs  values.rs
core/src/ast_builder/select/join/: hash_join.rs  join_constraint.rs  root.rs
core/src/chains/: mod.rs
core/src/chains/evm/: mod.rs
core/src/chains/evm/rpc/: evm_chains.rs
core/src/chains/sui/: mod.rs
core/src/chains_adapter/: error.rs  mod.rs
core/src/chains_adapter/evm/: mod.rs
core/src/chains_adapter/evm/rpc/: evm_chains.rs  mod.rs
core/src/chains_adapter/sui/: mod.rs
core/src/chains_adapter/sui/rpc/: mod.rs  sui_chains.rs
core/src/data/: key.rs  literal.rs  mod.rs  schema.rs
core/src/data/value/: convert.rs  expr.rs  json.rs  literal.rs  mod.rs
core/src/data/value/binary_op/: mod.rs
core/src/data/value/binary_op/integer/: macros.rs
core/src/executor/: execute.rs  fetch.rs  mod.rs
core/src/executor/aggregate/: error.rs  mod.rs
core/src/executor/evaluate/: mod.rs
core/src/executor/select/: error.rs  mod.rs
core/src/plan/: context.rs  evaluable.rs  index.rs  join.rs  mod.rs  planner.rs  schema.rs  validate.rs
core/src/plan/expr/: function.rs  mod.rs
core/src/store/: mod.rs
core/src/translate/: ast_literal.rs  data_type.rs  ddl.rs  error.rs  expr.rs  function.rs  mod.rs  operator.rs  query.rs
storages/composite-storage/: Cargo.toml
storages/composite-storage/src/: lib.rs  store.rs
storages/composite-storage/tests/: basic.rs
storages/csv-storage/: Cargo.toml
storages/csv-storage/src/: error.rs  lib.rs  store.rs
storages/file-storage/: Cargo.toml
storages/git-storage/: Cargo.toml
storages/git-storage/tests/: pull_and_push.rs
storages/idb-storage/: Cargo.toml
storages/idb-storage/src/: lib.rs
storages/json-storage/: Cargo.toml
storages/json-storage/src/: error.rs  function.rs  index.rs  lib.rs  store.rs  store_mut.rs  transaction.rs
storages/json-storage/tests/: error.rs  json_dml.rs  json_storage.rs  primary_key.rs  schema.rs  schemaless.rs
storages/memory-storage/: Cargo.toml
storages/mongo-storage/: Cargo.toml
storages/parquet-storage/: Cargo.toml
storages/parquet-storage/src/: column_def.rs  error.rs  function.rs  index.rs  lib.rs  store.rs  store_mut.rs  transaction.rs  value.rs
storages/parquet-storage/tests/: error.rs  parquet_storage.rs  schema.rs
storages/redis-storage/: Cargo.toml
storages/shared-memory-storage/: Cargo.toml
storages/sled-storage/: Cargo.toml
storages/sled-storage/src/: alter_table.rs  error.rs  store.rs  store_mut.rs  transaction.rs
storages/sled-storage/tests/: sled_transaction.rs
storages/web-storage/: Cargo.toml
storages/web-storage/src/: lib.rs
utils/: Cargo.toml
