[workspace]
resolver = "2"
members = [
  "cli",
  "core",
  "chains-support/evm-adapter",
  "chains-support/sui-adapter",
]

default-members = [
  "cli",
  "chains-support/evm-adapter",
  "chains-support/sui-adapter",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
description = "Sand Worm SQL - Open source SQL database engine fully written in Rust with pure functional execution layer, easily swappable storage and web assembly support!"
license = "Apache-2.0"
repository = "https://github.com/sand-worm-sql/wql"
documentation = "https://github.com/sand-worm-sql/wql"

[workspace.dependencies]
cli = { package = "sand-worm-cli", path = "./cli", version = "0.0.1" }
wql_evm_adapter = { path = "./chains-support/evm-adapter", version = "0.0.1" }
wql_sui_adapter = { path = "./chains-support/sui-adapter", version = "0.0.1" }
