[workspace]
resolver = "2"
members = [ 
  "cli",
  "core",
  "utils",
  "storages/*",
  "chains-support/*",
]

default-members = [
  "cli",
  "utils",
  "storages/*",
  "chains-support/*",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
description = "Sand Worm SQL - Open source SQL database engine fully written in Rust with pure functional execution layer, easily swappable storage and web assembly support!"
license = "Apache-2.0"
repository = "https://github.com/sand-worm-sql/wql"
documentation = "https://github.com/sand-worm-sql/wql"

[workspace.dependencies]
wql-core = { path = "./core", version = "0.0.1" }
wql-cli = { package = "sand-worm-cli", path = "./cli", version = "0.0.1" }
wql_evm_adapter = { path = "./chains-support/evm-adapter", version = "0.0.1" }
wql_sui_adapter = { path = "./chains-support/sui-adapter", version = "0.0.1" }
wql-json-storage = { path = "./storages/json-storage", version = "0.0.1" }
utils = { package = "wql-utils", path = "./utils", version = "0.0.1" }
