[package]
name = "sand-worm-cli"
authors = ["Ifechukwu Daniel <izjapfjhw@mozmail.com>"]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
clap = { version = "3.2.2", features = ["derive"] }
rustyline = "9.1"
rustyline-derive = "0.6"
tabled = "0.8"
thiserror = "1.0"
edit = "0.1.4"
futures = "0.3"
anyhow = "1.0"
strum_macros = "0.25"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }