[package]
name = "wql-core"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]

alloy = { version = "0.6.4", features = ["std", "contract", "provider-http", "network", "rpc-types"] }
regex = "1"
async-trait = "0.1"
async-recursion = "1"
cfg-if = "1"
futures-enum = "0.1.17"
futures = "0.3"
chrono = { version = "0.4.38", features = ["serde", "wasmbind"] }
rust_decimal = { version = "1", features = ["serde-str"] }
im-rc = "15"
iter-enum = "1"
itertools = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = { version = "0.50", features = ["serde", "bigdecimal"] }
graphql-parser = "0.4.0"
thiserror = "1.0"
strum_macros = "0.25"
bigdecimal = { version = "0.4.1", features = ["serde", "string-only"] }
hex = "0.4"
rand = "0.8"
ordered-float = { version = "4", features = ["serde"] }
md-5 = "0.10.5"

[target.'cfg(target_arch = "wasm32")'.dependencies.uuid]
version = "1"
features = ["v4", "js"]
[target.'cfg(not(target_arch = "wasm32"))'.dependencies.uuid]
version = "1"
features = ["v4"]

[dev-dependencies]
pretty_assertions = "1"