[package]
name = "wql-evm-adapter"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
wql-core.workspace = true
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1", features = ["full", "rt", "macros"] }
serde_json = "1"
thiserror = "1.0"
alloy = { version = "0.6.4", features = ["std", "contract", "provider-http", "network", "rpc-types"] }
