[package]
name = "wql-sui-adapter"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }