[package]
name = "wql_memory_storage"
authors = ["Taehoon Moon <taehoon.moon@outlook.com>"]
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
wql-core.workspace = true
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
futures = "0.3"

[dev-dependencies]

tokio = { version = "1", features = ["rt", "macros"] }
